# messaging-fullstack

./: README.md
messaging-backend/: Cargo.toml  README.md
messaging-backend/src/: main.rs  models.rs  server.rs  session.rs  utils.rs
messaging-frontend/: README.md  package.json
messaging-frontend/src/: App.tsx  AuthContext.tsx  Messaging.tsx  index.css  index.tsx
messaging-frontend/src/components/: LoginForm.tsx  RegistrationForm.tsx
